# POO-Reserva_Natural

./: .gitignore  CMakeLists.txt  NomeAulo.txt  POO -TrabalhoPratico[Meta 1].docx  README.md  commands.txt  constantes.txt  main.cpp  start.bat
Class/Animal/: Animal.cpp
Class/Animal/Bunny/: Bunny.h
Class/Animal/Kangaroo/: Kangaroo.cpp  Kangaroo.h
Class/Animal/MysteryAnimal/: MysteryAnimal.cpp  MysteryAnimal.h
Class/Animal/Sheep/: Sheep.cpp  Sheep.h
Class/Animal/Wolf/: Wolf.cpp  Wolf.h
Class/Entity/: Entity.cpp  Entity.h  Enums.h
Class/Entity/Animal/: Animal.cpp  Animal.h  AnimalList.h
Class/Entity/Animal/Bunny/: Bunny.cpp  Bunny.h
Class/Entity/Animal/Kangaroo/: Kangaroo.cpp  Kangaroo.h
Class/Entity/Animal/MysteryAnimal/: MysteryAnimal.cpp  MysteryAnimal.h
Class/Entity/Animal/Rabbit/: Rabbit.cpp  Rabbit.h
Class/Entity/Animal/Sheep/: Sheep.cpp  Sheep.h
Class/Entity/Animal/Wolf/: Wolf.cpp  Wolf.h
Class/Entity/Food/: Food.cpp  Food.h  FoodList.h
Class/Entity/Food/Body/: Body.cpp  Body.h
Class/Entity/Food/Carrot/: Carrot.cpp  Carrot.h
Class/Entity/Food/Grass/: Grass.cpp  Grass.h
Class/Entity/Food/MysteryFood/: MysteryFood.cpp  MysteryFood.h
Class/Entity/Food/Steak/: Steak.cpp  Steak.h
Class/Food/Body/: Body.cpp  Body.h
Class/Food/Carrot/: Carrot.h
Class/Food/Grass/: Grass.h
Class/Food/MysteryFood/: MysteryFood.h
Class/Food/Steak/: Steak.cpp  Steak.h
Class/Reserve/: Reserve.cpp  Reserve.h
Class/Simulator/: Simulator.cpp  Simulator.h
Class/UI/: UI.cpp  UI.h
Libary/consts/: consts.cpp  consts.h
Libary/utils/: utils.cpp  utils.h
